Resolve api request

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
   <!-- endinject -->
 </head>
 <body>
+<p>Avant tout, installer l'extension chrome suivante: <a href="https://chrome.google.com/webstore/detail/allow-control-allow-origi/nlfbmbojpeacfghkpbjhddihlkkiljbi" target="_blank">Allow-Control-Allow-Origin</a></p>
 
   <app></app>
 
